--- a/bookSearch/package.json
+++ b/bookSearch/package.json
@@ -78,7 +78,7 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-ionic": {
         "APP_ID": "d6a43eda",
-        "CHANNEL_NAME": "Production",
+        "CHANNEL_NAME": "Master",
         "UPDATE_METHOD": "background",
         "MAX_STORE": "3",
         "UPDATE_API": "https://api.ionicjs.com",
