--- a/bookSearch/package.json
+++ b/bookSearch/package.json
@@ -13,6 +13,8 @@
   },
   "private": true,
   "dependencies": {
+    "@ionic-native/file-transfer": "^5.2.0",
+    "@ionic-native/file": "^5.2.0",
     "@angular/common": "^7.2.2",
     "@angular/core": "^7.2.2",
     "@angular/forms": "^7.2.2",
